  across a given set of nodes. No v1 API is available. (Houston Putman, Tomás Fernández Löbbe, Jason Gerlowski, Radu Gheorghe)

* SOLR-16827: Add min/max scaling to the reranker (Joel Bernstein)

* SOLR-16844: Added new parameter `backupConfigset` to collection Backup to optionally skip backing up configsets. (Tomás Fernández Löbbe)

Improvements
---------------------

* SOLR-16183: XML update allows <doc> <doc name="child"> ... </doc> </doc>.
  (Vinayak Hegde via Mikhail Khludnev)

* SOLR-16393: The path of the v2 "delete alias" API has been tweaked slightly to be more intuitive, and is now available at
  `DELETE /api/aliases/aliasName`. (Jason Gerlowski)

* SOLR-16393: Solr's v2 "aliasprop" CRUD APIs have been tweaked slightly to be more intuitive.  Alias property modification
  is now available at `PUT /api/aliases/aliasName/properties` (for bulk modification) and `PUT /api/aliases/aliasName/properties/propName`
  (for single property updates).  Additionally new APIs have been added for listing properties (`GET /api/aliases/aliasName/properties`),
  fetching single property values (`GET /api/aliases/aliasName/properties/propName`), and property deletion
  (`DELETE /api/aliases/aliasName/properties/propName`). (Alex Deparvu via Jason Gerlowski)

* SOLR-10466: Introduce Builder setter for defaultCollection on cloud SolrClients.  Deprecated
  direct setter setDefaultCollection on cloud SolrClients. (Eric Pugh, David Smiley)

* SOLR-16391: The path of the v2 "collprop" API has been tweaked slightly to be more intuitive.  Endpoints are now
  available under the `PUT` and `DELETE` verbs at `/api/collections/collName/properties/propName` depending on whether the property is
  being upserted or deleted. (Jason Gerlowski)

* SOLR-16394: The path of the v2 "collection backup" API has been tweaked slightly to be more intuitive, and is now available at
  `POST /api/collections/backups/backupName/versions`. (Jason Gerlowski)
